--- a/samples/snippets/pom.xml
+++ b/samples/snippets/pom.xml
@@ -45,6 +45,12 @@
     <dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-spanner</artifactId>
+      <version>6.45.4-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.api.grpc</groupId>
+      <artifactId>proto-google-cloud-spanner-admin-database-v1</artifactId>
+      <version>6.45.4-SNAPSHOT</version>
     </dependency>
     <!-- [END spanner_install_with_bom] -->
 
